examples/non-examples/stack-traces/error-in-bind-head.golden
Error at phase p0:
    error-in-bind-head.kl:3.29-3.30: e
    stack trace:
    ---- in pure macro
    ---- in bind macro head
    λx. pure x
    ---- Halt
