examples/non-examples/stack-traces/error-in-bind-head.kl
#lang "prelude.kl"

(example (>>= (pure (error 'e)) (lambda (x) (pure x))))